Don't ask me how, but i think I fixed the epub cutoff issue

--- a/UI/Web/src/app/book-reader/_components/book-reader/book-reader.component.scss
+++ b/UI/Web/src/app/book-reader/_components/book-reader/book-reader.component.scss
@@ -184,8 +184,7 @@ $action-bar-height: 38px;
     position: relative;
     height: 100%;
 
-
-    //background-color: purple !important;
+   // background-color: purple !important;
 
     &.column-layout-1 {
         height: calc((var(--vh, 1vh) * 100) - $action-bar-height);
@@ -205,7 +204,7 @@ $action-bar-height: 38px;
 .book-content {
   position: relative;
   margin: 0 0;
-  padding: 20px 2px;
+  padding: 20px 0px;
 
   &.column-layout-1 {
       height: calc((var(--vh) * 100) - calc($action-bar-height)); //  * 2
@@ -274,8 +273,6 @@ $action-bar-height: 38px;
         word-break: break-word;
         overflow-wrap: break-word;
     }
-
-
 }
 
 .column-layout-2 {
@@ -286,9 +283,6 @@ $action-bar-height: 38px;
         word-break: break-word;
         overflow-wrap: break-word;
     }
-
-
-
 }
 
 // A bunch of resets so books render correctly
